@@ -23,7 +23,7 @@
 package net.solarnetwork.central.in.config;
 
 import static org.springframework.security.config.http.SessionCreationPolicy.STATELESS;
-import java.util.Arrays;
+import java.util.List;
 import javax.sql.DataSource;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
@@ -52,19 +52,20 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.servlet.HandlerExceptionResolver;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import net.solarnetwork.central.biz.UserEventAppenderBiz;
 import net.solarnetwork.central.security.NodeUserDetailsService;
 import net.solarnetwork.central.security.Role;
 import net.solarnetwork.central.security.jdbc.JdbcUserDetailsService;
 import net.solarnetwork.central.security.service.AuthenticationUserEventPublisher;
+import net.solarnetwork.central.security.service.UidX500PrincipalExtractor;
 import net.solarnetwork.central.security.web.HandlerExceptionResolverRequestRejectedHandler;
+import tools.jackson.databind.ObjectMapper;
 
 /**
  * Security configuration.
  *
  * @author matt
- * @version 1.6
+ * @version 2.0
  */
 @Configuration
 @EnableWebSecurity
@@ -102,9 +103,9 @@ public class WebSecurityConfig {
 	public CorsConfigurationSource corsConfigurationSource() {
 		CorsConfiguration configuration = new CorsConfiguration();
 		configuration.setAllowCredentials(false);
-		configuration.setAllowedOrigins(Arrays.asList("*"));
-		configuration.setAllowedMethods(Arrays.asList("GET", "HEAD", "POST", "PUT", "DELETE", "PATCH"));
-		configuration.setAllowedHeaders(Arrays.asList("Authorization", "X-SN-Date"));
+		configuration.setAllowedOrigins(List.of("*"));
+		configuration.setAllowedMethods(List.of("GET", "HEAD", "POST", "PUT", "DELETE", "PATCH"));
+		configuration.setAllowedHeaders(List.of("Authorization", "X-SN-Date"));
 		UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
 		source.registerCorsConfiguration("/**", configuration);
 		return source;
@@ -116,7 +117,7 @@ public class WebSecurityConfig {
 
 		// this following is disabled to allow for the SSL_CLIENT_CERT header value
 		// which is a full PEM encoded certificate with newline characters
-		firewall.setAllowedHeaderValues((header) -> true);
+		firewall.setAllowedHeaderValues(_ -> true);
 
 		return firewall;
 	}
@@ -223,7 +224,7 @@ public class WebSecurityConfig {
 
 					.x509((x509) -> x509
 							.userDetailsService(new NodeUserDetailsService())
-							.subjectPrincipalRegex("UID=(.*?),"))
+							.x509PrincipalExtractor(UidX500PrincipalExtractor.INSTANCE))
 
 					.authorizeHttpRequests((matchers) -> matchers
 							.requestMatchers(HttpMethod.OPTIONS, "/solarin/**").permitAll()
